--- a/Sys_monitor/Sys_monitor.vcxproj.filters
+++ b/Sys_monitor/Sys_monitor.vcxproj.filters
@@ -24,6 +24,12 @@
     <ClCompile Include="disk_checker.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="check_rm_drive.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="service_checker.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="header.h">
