--- a/Sys_monitor/Sys_monitor.vcxproj.filters
+++ b/Sys_monitor/Sys_monitor.vcxproj.filters
@@ -61,6 +61,12 @@
     <Text Include="config2.txt">
       <Filter>Fichiers sources</Filter>
     </Text>
+    <Text Include="logFile.txt">
+      <Filter>Fichiers sources</Filter>
+    </Text>
+    <Text Include="service_log.txt">
+      <Filter>Fichiers sources</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <None Include="HTMLPage.htm">
